--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -3,6 +3,9 @@
 # freeze computational output
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
 freeze: true
-
 # Enable banner style title blocks
 title-block-banner: true
+
+format:
+    html:
+        fig-align: center
