--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,9 @@
 project:
     type: website
     output-dir: docs
+    render:
+        - "*.qmd"
+        - "!envs/"
 
 website:
     title: "Ethan Orlowsky"
